DDPB-1529 PA client profile spacing fix

--- a/src/AppBundle/Resources/assets/scss/digideps/_section-list-item.scss
+++ b/src/AppBundle/Resources/assets/scss/digideps/_section-list-item.scss
@@ -77,6 +77,8 @@
 
     // PA Client Profile panels adjustments
     .panel-admin & {
+        padding-bottom: 0;
+
         &:last-child {
             border-bottom: 1px solid $grey-3;
         }
